--- a/src/components/maintitle/index.css
+++ b/src/components/maintitle/index.css
@@ -1,21 +1,25 @@
 .title__div {
     width: 50%;
     height: 25%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     padding: 20px;
     
+    
 }
 
-.title__div h1 {
+.up__title {
     font-size: 6rem;
     color: #ff50ff;
     transform: skew(15deg);
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 a {
-    color: #ff50ff;
+    color: transparent;
     text-decoration: none;
 }
 
@@ -30,3 +34,77 @@ a::after {
 a:hover::after {
     color: transparent;
 }
+
+
+
+a::before {
+    content: "CyberRandom";
+    color: #5ff1f1;
+    position: absolute;
+    top: 0;
+    left: 74px;
+    transform: skew(-4deg);
+}
+
+a:hover::before {
+    color: #ec96ec;
+}
+
+.up__title:hover {
+    animation: glitch 1s alternate;
+    animation: glitch 1s alternate-reverse;
+}
+
+.sub__title {
+    font-size: 6rem;
+    color: #6ddbff;
+    transform: skew(15deg);
+    position: absolute;
+    bottom: 2px;
+    left: 4px;
+    animation: glitch 2s alternate;
+}
+
+.sub__title {
+    animation: glitch 2s loop;
+    animation: glitch 1s alternate-reverse;
+}
+
+@keyframes glitch {
+    10% {
+      bottom: 2px;
+      left: 4px;
+    }
+    20% {
+        bottom: 0;
+        left: 4px;
+    }
+    30% {
+      bottom: 8px;
+      left: 0;
+    }
+    40% {
+        bottom: 0;
+        left: 12px;
+    }
+    50% {
+        bottom: 0;
+        left: 12px;
+    }
+    60% {
+      left: 0px;
+      bottom: -4px;
+    }
+    70% {
+      bottom: 0px;
+      left: 8px;
+    }
+    80% {
+        left: 4px;
+        bottom: 4px;
+    }
+    90% {
+        left: 0;
+        bottom: 0;
+    }
+  }
